# xlsx-agent

./: .gitignore  AGENTS.md  README.md  USAGE.md  config.env  pyproject.toml  start.bat  start.sh
.gemini/: config.yaml  styleguide.md
app/: __init__.py  agent.py  common.py  main.py
app/static/: chat.html  index.html
tests/: test_agent.py  test_api.py  test_checker.py  test_summary.py
