[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlsx-agent"
version = "0.1.0"
description = "Instruction-based Excel auto-edit service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1",
  "openpyxl>=3.1.0,<4",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30.0,<1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9",
  "httpx>=0.27.0,<1"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
